<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lunar Gaze</string>
    <string name="category_image">Category Image</string>
    <string name="empty">Empty</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create_favorite_folder">Create Favorite Folder</string>
    <string name="displayImage">Searched Images</string>
    <string name="displayEmpty">There is nothing to show</string>
    <string name="displaySearchEmpty">Nothing was found</string>
    <string name="favorite_folders">favorite folders</string>
    <string name="default_folder_name">My Favorite Images</string>
    <string name="full_screen_image">Full Screen Image</string>
    <string name="save_button_icon">Save Button Icon</string>
    <string name="share_button_icon">Share Button Icon</string>
    <string name="create_favorite_file">Create Favorite File</string>
    <string name="save">Save</string>
    <string name="enter_a_name_for_your_file">Enter a name for your file</string>
    <string name="your_favorite_file_list_is_empty">Your favorite file list is empty</string>
    <string name="bin">bin</string>
    <string name="select_a_file_to_save_your_image">Select a file to save your image</string>
    <string name="there_is_nothing_in_your_file">There is nothing in your bookmark</string>
    <string name="information">Information</string>
    <string name="type">Type</string>
    <string name="uploaded_by">Uploaded by</string>
    <string name="rating">Rating</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of .</string>
    <string name="description">Description</string>
    <string name="loading_screen">loading screen</string>
    <string name="file_name">File Name</string>
    <string name="browse">Browse:</string>
    <string name="current_folder_in">Current folder in:</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="google_sign_out" tools:ignore="MissingTranslation">Google Sign Out</string>
    <string name="permission_denied" tools:ignore="MissingTranslation">You must give permission</string>
    <string name="manage_permission" tools:ignore="MissingTranslation">Manage the permissions</string>
    <string name="successful_save" tools:ignore="MissingTranslation">Successfully Saved</string>
    <string name="copy_url" tools:ignore="MissingTranslation">URL Copied</string>

    <!-- don't translate these-->
    <string name="open_nav" translatable="false">Open Navigation</string>
    <string name="close_nav" translatable="false">Close Navigation</string>


</resources>