<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/night"
        android:padding="5dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circular"
        app:srcCompat="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/fullScreenImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_marginVertical="50dp"
        android:contentDescription="@string/full_screen_image"
        android:src="@drawable/ic_launcher_background" />


    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/save_button_icon"
        android:src="@drawable/save" />

    <ImageView
        android:id="@+id/shareButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@id/saveButton"
        android:layout_alignBottom="@id/saveButton"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/share_button_icon"
        android:src="@drawable/share" />


</RelativeLayout>