<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/night">


    <include
        android:id="@+id/searchLoadingScreen"
        layout="@layout/loading_screen_layout"
        android:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/searchFragmentEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/displaySearchEmpty"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:visibility="invisible" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse"
            android:layout_marginStart="7dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:maxLines="1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/browseWord"
            android:text="@string/empty"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:maxEms="7"
            android:ellipsize="end"
            android:layout_marginStart="6dp"
            android:maxLines="1"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchAdapter"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_marginTop="45dp"
        android:layout_height="match_parent" />




</RelativeLayout>