<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_gravity="center"
    android:background="@drawable/pop_up_design"
    android:orientation="vertical"
    android:padding="2dp">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:fontFamily="@font/acme"
        android:text="@string/create_favorite_file"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:counterMaxLength="20"
        app:helperTextEnabled="true"
        app:helperText="cannot be empty*"
        app:helperTextTextColor="@color/red"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/file_name">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/favoriteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:maxLines="1"
            android:ems="7"
            android:maxLength="20"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="100dp"
        android:backgroundTint="@color/beyond_blue"
        android:layout_height="50dp"
        android:layout_marginVertical="13dp"
        android:layout_marginStart="115dp"
        android:fontFamily="@font/acme"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />
</LinearLayout>